// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`after editing matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="DurationInput-main"
    role="timer"
    tabindex="0"
  >
    <div
      class="DurationInput-area"
    >
      <span
        class="Digit lit"
      >
        1
      </span>
      <span
        class="Digit lit"
      >
        5
      </span>
      <span
        class="Label minutes lit"
      >
        m
      </span>
      <span
        class="Digit lit"
      >
        0
      </span>
      <span
        class="Digit lit"
      >
        0
      </span>
      <span
        class="Label seconds lit"
      >
        s
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot 1`] = `
<div
  className="DurationInput-main"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  role="timer"
  tabIndex={0}
>
  <div
    className="DurationInput-area"
  >
    <span
      className="Digit lit"
    >
      1
    </span>
    <span
      className="Digit lit"
    >
      5
    </span>
    <span
      className="Label minutes lit"
    >
      m
    </span>
    <span
      className="Digit lit"
    >
      0
    </span>
    <span
      className="Digit lit"
    >
      0
    </span>
    <span
      className="Label seconds lit"
    >
      s
    </span>
  </div>
</div>
`;

exports[`when editing matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="DurationInput-main"
    role="textbox"
    tabindex="0"
  >
    <div
      class="DurationInput-area editing"
    >
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Label hours"
      >
        h
      </span>
      <span
        class="Digit"
      >
        1
      </span>
      <span
        class="Digit"
      >
        5
      </span>
      <span
        class="Label minutes"
      >
        m
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Label seconds"
      >
        s
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when editing when typing 4 matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="DurationInput-main"
    role="textbox"
    tabindex="0"
  >
    <div
      class="DurationInput-area editing"
    >
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Label hours"
      >
        h
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Label minutes"
      >
        m
      </span>
      <span
        class="Digit"
      >
        0
      </span>
      <span
        class="Digit lit"
      >
        4
      </span>
      <span
        class="Label seconds lit"
      >
        s
      </span>
    </div>
  </div>
</DocumentFragment>
`;
